Prevent image enlargement on mobile

--- a/frontend/src/css/ChessBoard.css
+++ b/frontend/src/css/ChessBoard.css
@@ -25,6 +25,10 @@
 .board .square img {
   width: 100%;
   height: 100%;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  user-select: none;
+  pointer-events: auto;
 }
 
 .board .square .position-label {
